--- a/style.css
+++ b/style.css
@@ -1,65 +1,102 @@
 /* Variables */
 
 :root {
-    --basic-white: #ffffff;
-    --background-one: #F1F5F7;
-    --background-top: #F3F7F9;
-    --background-top-two: #F2F6F8;
+  --basic-white: #ffffff;
+  --background-one: #F1F5F7;
+  --background-top: #F3F7F9;
+  --background-top-two: #F2F6F8;
 
+  --dark-top-one: #293449;
+  --dark-top-two: #32425C;
+  --dark-top-click: #161D29;
+  --dark-menu-click: #1D2739;
+  --grey-light: #C5C5C5;
+  --basic-red: #EE3643;
+  --red-one: #CA2C37;
+  --red-two: #BA2732;
+  --basic-green: #63A63E;
+  --green-one: #5FBB2D;
+  --green-two: #518534;
 
-    --dark-top-one: #293449;
-    --dark-top-two: #32425C;
-    --dark-top-click: #161D29;
-    --dark-menu-click: #1D2739;
-    --grey-light: #C5C5C5;
-    --basic-red: #EE3643;
-    --red-one: #CA2C37;
-    --red-two: #BA2732;
-    --basic-green: #63A63E;
-    --green-one: #5FBB2D;
-    --green-two: #518534;
+  --special-catalog: #F7F3EC;
+  --special-index: #F9F5F0;
 
-    --special-catalog: #F7F3EC;
-    --special-index: #F9F5F0;
+  --special-yellow: #FFBF47;
+  --special-yellow-two: #FFC047;
+  --special-blue: #3BBCE3;
+  --special-purple: #DC91D8;
+  --special-green: #8ED78F;
 
-    --special-yellow: #FFBF47;
-    --special-yellow-two: #FFC047;
-    --special-blue: #3BBCE3;
-    --special-purple: #DC91D8;
-    --special-green: #8ED78F;
+  --font-black:#000000;
+  --font-grey-light: #A9A9A9;
+  --font-yellow: #FFD180;
 
-    --font-black:#000000;
-    --font-grey-light: #A9A9A9;
-    --font-yellow: #FFD180;
+  --font-menu-click: rgba(255, 255, 255, 0.5);
+  --white-03: rgba(255, 255, 255, 0.3);
 
-    --font-menu-click: rgba(255, 255, 255, 0.5);
-    --white-03: rgba(255, 255, 255, 0.3);
+  --border-item: #EAEAEA;
+  --border-pagination: #E5E5E5;
 
-    --border-item: #EAEAEA;
-    --border-pagination: #E5E5E5;
-
-    --features: rgba(197,197,197,0.3);
-    --features-dark: rgba(169,169,169,0.3);
-    --sorting-black: rgba(0, 0, 0, 0.3);
-  }
+  --features: rgba(197,197,197,0.3);
+  --features-dark: rgba(169,169,169,0.3);
+  --sorting-black: rgba(0, 0, 0, 0.3);
+}
 
   /* Global */
 
-  body {
-    min-width: 960px;
-    margin: 0;
-    padding: 0;
-    background-color: var(--basic-white);
-  }
+body {
+  min-width: 960px;
+  margin: 0;
+  padding: 0;
+  background-color: var(--basic-white);
+}
 
-  .page a {
-    text-decoration: none;
-  }
+.page a {
+  text-decoration: none;
+}
 
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/*Grid*/
+
+.page {
+  height: 100%;
+}
+
+.page-body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
+}
+
+.page-catalog .breadcrumbs {
+  grid-column: 1 / -1;
+}
+
+.page-catalog .page-title {
+  grid-column: 1 / -1;
+  margin-bottom: 20px;
+}
+
+/* Grid for pages */
+
+.main-catalog {
+  display: grid;
+  grid-template-columns: 220px 1fr;
+  align-content: start;
+}
+
+/*Container*/
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
 
 /* Header */
 
@@ -67,109 +104,281 @@
   background-color: var(--background-top);
 }
 
- .header-top {
+.main-header-bar {
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   color: var(--basic-white);
   background-color: var(--dark-top-one);
- }
+}
 
- .logo:active {
-   background-color: var(--red-two);
- }
+ .header-top {
+  display: grid;
+  grid-template-columns: 220px 271px repeat(3, 1fr);
+  width: 940px;
+  height: 42px;
 
- input[type="search"] {
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.logo {
+  width: 220px;
+	height: 47px;
+  background: var(--basic-red) url("./img/logo.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+}
+
+/*
+.logo:active {
+  background-color: var(--red-two);
+  box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+}
+*/
+
+
+.search-form input[type="search"] {
+  height: 42px;
+  width: 271px;
+
   font-family: "Cuprum", Arial, sans-serif;
   color: var(--basic-white);
   font-size: 18px;
   line-height: 24px;
   background-color: var(--dark-top-one);
   border: none;
- }
+}
 
- input:focus {
+.search-form::before {
+  content: "";
+
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
+
+  background-image: url("./img/icon-search.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.search-form input:focus {
   color: var(--font-black);
   outline: none;
   background-color: var(--basic-white);
- }
+}
 
- .bookmarks:active, .basket:active  {
-   color: var(--font-menu-click);
-   background-color: var(--dark-top-click);
- }
+.bookmarks::before {
+  content: "";
 
- .full-basket {
-   background-color: var(--basic-red);
- }
+  width: 14px;
+  height: 15.58px;
+  margin-right: 9px;
 
- .full-basket:active {
-   background-color: var(--red-two);
-   color: var(--font-menu-click);
- }
+  background-image: url("./img/icon-bookmark.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
 
- .make-order {
+.basket::before {
+  content: "";
+
+  width: 15px;
+  height: 15px;
+  margin-right: 8px;
+
+  background-image: url("./img/icon-cart.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.bookmarks:active, .basket:active {
+  color: var(--font-menu-click);
+  background-color: var(--dark-top-click);
+}
+
+.full-basket {
+  height: 42px;
+  background-color: var(--basic-red);
+}
+
+.full-basket:active {
+  background-color: var(--red-two);
+  color: var(--font-menu-click);
+}
+
+.make-order {
+  height: 42px;
+  width: 150px;
   background-color: var(--basic-green);
- }
+}
 
  .make-order:hover {
   background-color: var(--green-one);
  }
 
- .make-order:active {
+.make-order:active {
   background-color: var(--basic-green);
   color: var(--font-menu-click);
 }
 
- .header-second {
+.header-second {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-self: center;
+
+  height: 158px;
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
   font-family: "Cuprum", Arial, sans-serif;
   background-color: var(--background-top);
- }
+}
 
- .text {
+.text {
+  height: 71px;
+  width: 197px;
+
+  margin: 0;
+  padding-top: 42.5px;
+
   color: var(--basic-red);
   font-size: 16px;
   line-height: 23px;
+}
 
- }
+.phone-adress {
+  width: 270px;
+  justify-self: center;
+  text-align: center;
+}
 
- .phone {
+.phone-top {
+  height: 45px;
+  width: 270px;
+
+  background-color: var(--background-top);
+  border: 3px solid var(--basic-white);
+}
+
+.phone {
   font-weight: bold;
   font-size: 21px;
   color: var(--basic-red);
-  background-color: var(--background-top);
-  border: 3px solid var(--basic-white);
- }
+}
 
- .adress-top {
+.phone::before {
+  content: "";
+
+  height: 19px;
+  width: 19px;
+  margin-right: 16.51px;
+
+  background-image: url("./img/icon-phone.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.adress-top {
   font-size: 14px;
   color: var(--dark-one);
   line-height: 24px;
   text-align: center;
- }
+}
 
- .sign-in, .sign-up {
+.user-navigation {
+  justify-self: end;
+  padding-top: 46px;
+}
+
+.user-office:before {
+  content: " • ";
+  height: 7px;
+  width: 6px;
+  font-weight: bold;
+  color: var(--dark-top-two);
+}
+
+.sign-in, .sign-up {
+  text-align: center;
   font-size: 21px;
   line-height: 21px;
   color: var(--font-black);
   background-color: var(--basic-white);
- }
+}
 
- .sign-in:hover, .sign-up:hover {
-   color: var(--basic-red);
- }
+.sign-in {
+  height: 45px;
+  width: 121px;
+  margin-right: 10px;
+  padding: 12px 27px 12px 45px;
+}
 
- .sign-in:active, .sign-up:active {
+.sign-in::before {
+  content: "";
+
+  height: 20px;
+  width: 17px;
+  margin-right: 16.51px;
+
+  background-image: url("./img/icon-logout.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.sign-up {
+  height: 45px;
+  width: 150px;
+
+  padding: 12px 24px 12px 24px;
+}
+
+.sign-in:hover, .sign-up:hover {
+  color: var(--basic-red);
+}
+
+.sign-in:active, .sign-up:active {
   color: var(--grey-light);
 }
 
 .user {
-  font-family: "Cuprum", Arial, sans-serif;;
+  height: 45px;
+  width: 299px;
+
+  padding: 12px 56px 12px 57px;
+
+  font-family: "Cuprum", Arial, sans-serif;
   font-size: 21px;
   line-height: 21px;
   text-align: center;
   color: var(--font-black);
   background-color: var(--basic-white);
+}
+
+.user::before {
+  content: "";
+
+  height: 20px;
+  width: 17px;
+  margin-right: 16.51px;
+
+  background-image: url("./img/icon-user.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.user::after {
+  content: "";
+
+  height: 20px;
+  width: 17px;
+  margin-left: 20px;
+
+  background-image: url("./img/icon-logout.svg");
+  background-repeat: no-repeat;
+  position: absolute;
 }
 
 .user-menu a {
@@ -186,18 +395,29 @@
   color: var(--grey-light);
 }
 
-.site-navigation {
-  list-style: none;
+/* User navigation */
+
+.main-navigation-wrapper {
+  height: 60px;
+  width: 940px;
+  margin: 0 auto;
+  margin-bottom: 60px;
+
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
   background-color: var(--dark-top-two);
 }
 
-/* User navigation */
+.site-navigation {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
-.header-top a,
-.site-navigation a {
+.header-top a, .site-navigation a {
   color: var(--basic-white);
 }
 
@@ -210,11 +430,15 @@
   color: var(--font-menu-click);
 }
 
-h1 {
-  font-family: "Cuprum", Arial, sans-serif;;
+.page-title {
+
+  font-family: "Cuprum", Arial, sans-serif;
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
+  padding-top: 29px;
+  padding-left: 29px;
+  padding-bottom: 30px;
   color: var(--dark-top-two);
   background-color: var(--background-top-two);
 }
@@ -226,8 +450,8 @@ h1 {
   text-transform: uppercase;
 }
 
-legend {
-    font-style: normal;
+.filter legend {
+  font-style: normal;
   font-weight: bold;
   font-size: 17px;
   line-height: 30px;
@@ -248,6 +472,23 @@ legend {
   box-sizing: border-box;
 }
 
+.filters h2 {
+  font-family: "PT Sans", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 18px;
+  color: var(--font-black);
+  background-color: var(--special-catalog);
+  text-transform: uppercase;
+}
+
+/*Catalog right-container*/
+
+.right-container {
+  margin-left: 20px;
+}
+
 .sorting {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
@@ -259,6 +500,8 @@ legend {
 }
 
 .sorting h3 {
+  font-size: 13px;
+  line-height: 18px;
   font-weight: normal;
 }
 
@@ -280,19 +523,121 @@ legend {
   color: var(--basic-red);
 }
 
-
 /* Features */
 
-.features-list {
+.main {
+  margin-top: 59px;
+}
+
+.features {
+  height: 409px;
+  width: 940px;
+  margin-bottom: 59px;
+
   font-family: "Cuprum", Arial, sans-serif;
   color: var(--basic-white);
 }
 
+.features-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+/* .features-slider {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+}
+*/
+
+
 .features-item {
   width: 300px;
   height: 123px;
-  left: 130px;
-  top: 379px;
+}
+
+.yellow {
+  background-color: var(--special-yellow);
+}
+
+.yellow:after {
+  content: "";
+
+  width: 44px;
+  height: 65px;
+  margin-right: 55px;
+
+  background-image: url("./img/icon-1.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.blue {
+  background-color: var(--special-blue);
+}
+
+.blue:after {
+  content: "";
+
+  width: 75px;
+  height: 61px;
+  margin-right: 37px;
+
+  background-image: url("./img/icon-2.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.purple {
+  background-color: var(--special-purple);
+}
+
+.purple:after {
+  content: "";
+
+  width: 78px;
+  height: 62px;
+  margin-right: 34px;
+
+  background-image: url("./img/icon-3.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.green {
+  grid-column: 3 / 4;
+  background-color: var(--special-green);
+}
+
+.green:after {
+  content: "";
+
+  width: 59px;
+  height: 72px;
+  margin-right: 38px;
+
+  background-image: url("./img/icon-4.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.yellow-two {
+  grid-column: 3 / 4;
+  background-color: var(--special-yellow-two);
+}
+
+.yellow-two:after {
+  content: "";
+
+  width: 78px;
+  height: 63px;
+  margin-right: 34px;
+
+  background-image: url("./img/icon-5.svg");
+  background-repeat: no-repeat;
+  position: absolute;
 }
 
 .features-item h3 {
@@ -301,27 +646,7 @@ legend {
   line-height: 30px;
 }
 
-.yellow {
-  background-color: var(--special-yellow);
-}
-
-.blue {
-  background-color: var(--special-blue);
-}
-
-.purple {
-  background-color: var(--special-purple);
-}
-
-.green {
-  background-color: var(--special-green);
-}
-
-.yellow-two {
-  background-color: var(--special-yellow-two);
-}
-
-.features-item a {
+.features-link  {
   height: 38px;
   width: 135px;
 
@@ -336,20 +661,53 @@ legend {
   background-color: var(--white-03);
 }
 
-.features-item a:hover {
+.features-link:hover {
   background: var(--features);
 }
 
-.features-item a:active {
+.features-link:active {
   background-color: var(--features-dark);
 }
 
 /*Goods*/
 
+.main .goods {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  height: 427px;
+  width: 940px;
+}
+
+.catalog .goods {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
+  column-gap: 20px;
+}
+
+.popular-goods-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+
+
 .popular-goods, .section-manufacturers {
+  height: 89px;
+  width: 940px;
+  margin-bottom: 20px;
+
   font-family: "Cuprum", Arial, sans-serif;
   text-transform: uppercase;
   background-color: var(--special-index);
+}
+
+.popular-goods {
+  grid-column: 1 / 5;
+  grid-template-columns: 1fr 1fr;
 }
 
 .popular-goods h2, .section-manufacturers h2 {
@@ -362,7 +720,7 @@ legend {
 .popular-goods-item {
   font-family: "PT Sans", Arial, sans-serif;
   text-align: center;
-  }
+}
 
 .popular-goods-item h3 {
   color: var(--basic-black);
@@ -371,10 +729,14 @@ legend {
   font-weight: bold;
 }
 
-s {
+.popular-goods-item  {
   font-size: 17px;
   line-height: 18px;
   font-weight: bold;
+}
+
+.popular-goods-item s {
+  text-decoration: line-through;
   color: var(--font-grey-light);
 }
 
@@ -446,6 +808,8 @@ s {
 /* Breadcrumbs */
 
 .breadcrumbs {
+  padding: 0;
+  margin: 0;
   list-style: none;
   font-family: "PT Sans", Arial, sans-serif;
   font-weight: normal;
@@ -458,20 +822,49 @@ s {
   color: var(--font-black);
 }
 
+.breadcrumbs li:first-child::before {
+  content: "";
+  height: 14px;
+  width: 12px;
+
+  background-image: url("./img/icon-home.svg");
+  position: absolute;
+}
+
 .breadcrumbs-current {
   color: var(--font-black);
 }
 
 /*Manufacturers*/
 
+.manufacturers {
+  display: grid;
+  grid-template-rows: auto auto;
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
 .manufacturers-list {
+  display: grid;
+  grid-template-columns: repeat(4, 220px);
+  grid-template-rows: repeat(2, auto);
+  column-gap: 20px;
+  row-gap: 20px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 .manufacturers-item {
   width: 220px;
   height: 145px;
+  text-align: center;
   border: 1px solid var(--border-item);
+}
+
+.manufacturers-item a {
+  display: block;
+  height: 100%;
 }
 
 .manufacturers-item:hover {
@@ -479,13 +872,12 @@ s {
 }
 
 .manufacturers-item:active {
-opacity:0.3;
+  opacity:0.3;
 }
 
 /*Servises*/
 
 .servises {
-  width: 1200px;
   height: 522px;
   color: var(--font-black);
   background-color: var(--background-top-two);
@@ -505,6 +897,13 @@ opacity:0.3;
   line-height: 24px;
 }
 
+/*Company-contacts*/
+
+.company-contacts {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .company-contacts h2, .additional h2 {
   font-family: "Cuprum", Arial, sans-serif;
   font-weight: normal;
@@ -522,8 +921,22 @@ opacity:0.3;
   color: var(--font-black);
 }
 
+.about-company  {
+  padding-bottom: 70px;
+}
+
+.contacts {
+  justify-self: end;
+}
+
 .transport {
-  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.transport li {
+  padding: 12px;
 }
 
 .transport li:before {
@@ -565,10 +978,25 @@ opacity:0.3;
 /*Additional information*/
 
 .additional {
+  grid-column: 1 / -1;
   background-color: var(--background-one);
+  margin: 0;
+}
+
+.additional h2 {
+  padding-top: 64px;
+}
+
+.additional p {
+  padding-bottom: 68px;
 }
 
 /*Footer*/
+
+.footer-container {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+}
 
 .main-footer {
   font-family: "Cuprum", Arial, sans-serif;
@@ -576,7 +1004,7 @@ opacity:0.3;
   background-color: var(--dark-top-two);
 }
 
-.container li {
+.footer-menu-list1, .footer-menu-list2 {
   list-style: none;
 }
 
@@ -593,26 +1021,54 @@ opacity:0.3;
   color: var(--font-yellow);
 }
 
-.footer-contacts li:hover {
+.footer-menu-list1 a:hover, .footer-menu-list2 a:hover {
   text-decoration: underline;
 }
 
-.footer-contacts li:active {
+.footer-menu-list1 a:active, .footer-menu-list2 a:active {
   opacity: 0.5;
 }
 
 .footer-two {
+  padding: 35px ;
   font-size: 16px;
   line-height: 18px;
   color: var(--basic-white);
   background-color: var(--dark-top-one);
 }
 
-.footer-two h2 {
+.footer-two .footer-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.rights {
+  margin: 0;
+  width: 227px;
+}
+
+.rights p {
   font-size: 16px;
   line-height: 18px;
   font-style: normal;
   font-weight: normal;
+}
+
+.footer-social {
+  width: 132px;
+  justify-self: center;
+}
+
+.feedback {
+  max-width: 137px;
+  margin: 0;
+  justify-self: end;
+}
+
+.copyright {
+  max-width: 98px;
+  margin: 0;
+  justify-self: end;
 }
 
 .feedback a, .copyright a {
@@ -625,7 +1081,7 @@ opacity:0.3;
 
  /*Modal*/
 
-label {
+.write-us label {
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 18px;
   line-height: 24px;
@@ -661,3 +1117,6 @@ label {
   background-color: var(--red-two);
 }
 
+.visually-hidden {
+  display: none;
+}
